--- a/re-former/app/views/users/new.html.erb
+++ b/re-former/app/views/users/new.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 
-  <form action="/users" method="post" accept-charset="UTF-8">
+<!--  <form action="/users" method="post" accept-charset="UTF-8">
     <label for="username">Username:</label>
     <input type="text" name="user[username]" id="username" value="">
     <label for="password">Password:</label>
@@ -11,3 +11,14 @@
     <input type="hidden" name="form__authenticity-token" value="<%= form_authenticity_token %>">
     <input type="submit" name="form__submit" value="Submit">
   </form>
+-->
+
+<%= form_tag("/users", method: "post") do %>
+  <%= label_tag("Username")%>
+  <%= text_field_tag("username")%>
+  <%= label_tag("Password")%>
+  <%= password_field_tag("password")%>
+  <%= label_tag("Email")%>
+  <%= email_field_tag("email")%>
+  <%= submit_tag("Submit") %>
+<% end %>
