--- a/re-former/app/views/users/new.html.erb
+++ b/re-former/app/views/users/new.html.erb
@@ -13,12 +13,23 @@
   </form>
 -->
 
-<%= form_tag("/users", method: "post") do %>
-  <%= label_tag("Username")%>
-  <%= text_field_tag("username")%>
-  <%= label_tag("Password")%>
-  <%= password_field_tag("password")%>
-  <%= label_tag("Email")%>
-  <%= email_field_tag("email")%>
-  <%= submit_tag("Submit") %>
+ <%#= form_tag("/users", method: "post") do %>
+  <%#= label_tag("Username")%>
+  <%#= text_field_tag("username")%>
+  <%#= label_tag("Password")%>
+  <%#= password_field_tag("password")%>
+  <%#= label_tag("Email")%>
+  <%#= email_field_tag("email")%>
+  <%#= submit_tag("Submit") %>
+<%# end %>
+
+<h3>Create a new User </h3>
+<%= form_for @user do |f| %>
+  <%= f.label "Username" %>
+  <%= f.text_field :username, placeholder: "Your username here" %> <br/>
+  <%= f.label "Password" %>
+  <%= f.password_field :password, placeholder: "Your password here" %> <br/>
+  <%= f.label "Email" %>
+  <%= f.email_field :email, placeholder: "example@example.com" %> <br/>
+  <%= f.submit %> <br/>
 <% end %>
