Twitter Clone part 1 complete. Issue with div

--- a/twittter/app/views/tweeets/_feed.html.erb
+++ b/twittter/app/views/tweeets/_feed.html.erb
@@ -6,7 +6,7 @@
       </p>
     </figure>
     <div class="media-content">
-      <% render 'tweeets/form' %>
+      <%= render 'tweeets/form' %>
     </div>
   </article>
 </div>
@@ -46,9 +46,9 @@
           <i class="fa fa-trash" aria-hidden="true"></i>
         </span>
       <% end %>
-    </div>
-  </nav>
-</div>
-</article>
-</div>
+          </div>
+        </nav>
+     </div>
+   </article>
+  </div>
 <% end %>
