--- a/twittter/app/views/tweeets/_feed.html.erb
+++ b/twittter/app/views/tweeets/_feed.html.erb
@@ -9,7 +9,6 @@
       <%= render 'tweeets/form' %>
     </div>
   </article>
-</div>
 
 <% @tweeets.each do |tweeet| %>
   <div class="box">
@@ -32,23 +31,18 @@
         <nav class="level">
           <div class="level-left is-mobile">
             <%= link_to tweeet, class: "level-item" do %>
-            <span class="icon">
-              <i class="fa fa-link" aria-hidden="true"></i>
-            </span>
-          <% end %>
-          <%= link_to edit_tweeet_path(tweeet), class: "level-item" do %>
-          <span class="icon">
-            <i class="fa fa-pencil" aria-hidden="true"></i>
-          </span>
-        <% end %>
-        <%= link_to tweeet, method: :delete, data: { confirm: "Are you sure you want to delete this tweeet?" } do %>
-        <span class="icon">
-          <i class="fa fa-trash" aria-hidden="true"></i>
-        </span>
-      <% end %>
+            <span class="icon"><i class="fa fa-link" aria-hidden="true"></i></span>
+            <% end %>
+            <%= link_to edit_tweeet_path(tweeet), class: "level-item" do %>
+            <span class="icon"><i class="fa fa-pencil" aria-hidden="true"></i></span>
+            <% end %>
+            <%= link_to tweeet, method: :delete, data: { confirm: "Are you sure you want to delete this tweeet?" } do %>
+            <span class="icon"><i class="fa fa-trash" aria-hidden="true"></i></span>
+            <% end %>
           </div>
         </nav>
      </div>
    </article>
   </div>
 <% end %>
+</div>
