--- a/twittter/app/views/tweeets/_feed.html.erb
+++ b/twittter/app/views/tweeets/_feed.html.erb
@@ -1,33 +1,36 @@
 <div class="column is-half">
+  <% if user_signed_in? %>
   <article class="media box">
     <figure class="media-left">
       <p class="image is-64x64">
-        <img src="https://bulma.io/images/placeholders/64x64.png">
+        <%= gravatar_image_tag(current_user.email, size: 64, alt: current_user.name) %>
       </p>
     </figure>
     <div class="media-content">
       <%= render 'tweeets/form' %>
     </div>
   </article>
+  <% end %>
 
 <% @tweeets.each do |tweeet| %>
   <div class="box">
     <article class="media">
       <div class="media-left">
         <figure class="image is-64x64">
-          <img src="https://bulma.io/images/placeholders/64x64.png">
+          <%= gravatar_image_tag(tweeet.user.email, size: 64, alt: tweeet.user.name) %>
         </figure>
       </div>
 
       <div class="media-content">
         <div class="content">
-          <strong>Airi Chow</strong>
+          <strong><%= tweeet.user.name %></strong>
           <br/>
-          <small>@airi-14x</small>
+          <small><%= tweeet.user.username %></small>
           <br/>
           <p><%= tweeet.tweeet %></p>
         </div>
 
+        <% if user_signed_in? %>
         <nav class="level">
           <div class="level-left is-mobile">
             <%= link_to tweeet, class: "level-item" do %>
@@ -41,6 +44,7 @@
             <% end %>
           </div>
         </nav>
+        <% end %>
      </div>
    </article>
   </div>
